Revert "downgrade to Java 8, because the aspectj plugin did not work with 12, it did not hurt so much in the end (thank you, Lombok :) )"
This reverts commit 02a06534