@@ -4,7 +4,7 @@ echo "Compiling the project"
 gradle jar || exit 1
 
 echo "Starting the server"
-java -jar server/build/libs/server.jar  > "out" &
+java  --enable-preview  -jar server/build/libs/server.jar  > "out" &
 echo "Server started, waiting a bit before starting the gateway"
 sleep 5
-java -jar gateway/build/libs/gateway.jar || exit 1
+java  --enable-preview  -jar gateway/build/libs/gateway.jar || exit 1
