@@ -22,8 +22,13 @@ repositories {
 	jcenter()
 }
 
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
+sourceCompatibility = JavaVersion.VERSION_12
+targetCompatibility = JavaVersion.VERSION_12
+
+
+tasks.withType(JavaCompile).each {
+	it.options.compilerArgs.add('--enable-preview')
+}
 
 jar{
 	manifest{
@@ -39,6 +44,7 @@ jar{
 
 tasks.test {
 	useJUnitPlatform()
+	jvmArgs("--enable-preview")
 }
 
 dependencies {
